--- a/app/src/main/res/layout/existing_trade_details_view.xml
+++ b/app/src/main/res/layout/existing_trade_details_view.xml
@@ -48,7 +48,7 @@
                         android:layout_marginLeft="@dimen/_10sdp"
                         android:background="@drawable/back"
                         android:backgroundTint="@android:color/white"
-                        android:onClick="@{()-> activity.onBackPressed()}" />
+                        android:onClick="@{()-> activity.previous()}" />
 
 
                     <TextView
