--- a/app/src/main/res/drawable/dash_board_bg_rect.xml
+++ b/app/src/main/res/drawable/dash_board_bg_rect.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:radius="@dimen/_10sdp"></corners>
-    <solid android:color="@color/cardview_shadow_end_color"></solid>
+   <!-- <corners android:radius="30dp"></corners>
+    <solid android:color="@color/grey"></solid>
+-->
+    <corners android:radius="30dp"></corners>
+    <solid android:color="#ffff"></solid>
 
 </shape>
