--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -101,5 +101,13 @@
     <color name="transparent_black_hex_7">#77000000</color>
     <color name="transparent_black_hex_8">#88000000</color>
     <color name="transparent_black_hex_9">#99000000</color>
+
+    <color name="grey1">#878787</color>
+    <color name="black_grey">#666666</color>
+    <color name="light_grey">#9c9c9c</color>
+    <color name="silver">#FFCCCCCC</color>
+    (12:38:20) <color name="greyed_out">#c7c7c7</color>
+    <color name="greyed_lite">#d9d9d9</color>
+    <color name="greyed_lite_transparent">#b36c6b6b</color>
 </resources>
 
