--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -7,6 +7,9 @@
 
                 android:startColor="@color/colorPrimary"
                 android:endColor="@color/colorPrimaryDark"/>
+            <size android:width="50dp" android:height="50dp"></size>
+
         </shape>
+
     </item>
 </layer-list>
