--- a/app/src/main/res/drawable/dash_board_bg_rect.xml
+++ b/app/src/main/res/drawable/dash_board_bg_rect.xml
@@ -1,10 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+            <padding android:bottom="1dp" android:left="1dp" android:right="1dp"
+                android:top="1dp"/>
+            <solid android:color="#00CCCCCC"/>
+            <corners android:radius="30dp"/>
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <padding android:bottom="1dp" android:left="1dp" android:right="1dp"
+                android:top="1dp"/>
+            <solid android:color="#10CCCCCC"/>
+            <corners android:radius="30dp"/>
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <padding android:bottom="1dp" android:left="1dp" android:right="1dp"
+                android:top="1dp"/>
+            <solid android:color="#20CCCCCC"/>
+            <corners android:radius="30dp"/>
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <padding android:bottom="1dp" android:left="1dp" android:right="1dp"
+                android:top="1dp"/>
+            <solid android:color="#30CCCCCC"/>
+            <corners android:radius="30dp"/>
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <padding android:bottom="1dp" android:left="1dp" android:right="1dp"
+                android:top="1dp"/>
+            <solid android:color="#30CCCCCC"/>
+            <corners android:radius="30dp"/>
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <padding android:bottom="1dp" android:left="1dp" android:right="1dp"
+                android:top="1dp"/>
+            <solid android:color="#50CCCCCC"/>
+            <corners android:radius="30dp"/>
+        </shape>
+    </item>
 
-   <!-- <corners android:radius="30dp"></corners>
-    <solid android:color="@color/grey"></solid>
--->
-    <corners android:radius="30dp"></corners>
-    <solid android:color="#ffff"></solid>
+    <!-- Background -->
+    <item>
+        <shape>
+            <solid android:color="#EFEBEB"/>
+            <corners android:radius="30dp"/>
+        </shape>
+    </item>
+</layer-list>
+    <!--
+    <?xml version="1.0" encoding="utf-8"?>
+    <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
-</shape>
+       &lt;!&ndash; <corners android:radius="30dp"></corners>
+        <solid android:color="@color/grey"></solid>
+    &ndash;&gt;
+        <corners android:radius="30dp"></corners>
+        <solid android:color="#EFEBEB"></solid>
+         &lt;!&ndash;<stroke android:color="@color/start" android:width="1dp">
+          </stroke>&ndash;&gt;
+    </shape>-->
